--- a/.github/workflows/libloading.yml
+++ b/.github/workflows/libloading.yml
@@ -48,6 +48,13 @@ jobs:
       - name: Compile without the standard library
         run: cargo clean && cargo +nightly build -Zbuild-std=core,alloc --no-default-features
 
+  musl-rust-lld-link-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup install stable --profile=minimal
+      - run: RUSTFLAGS="-Clinker=rust-lld" cargo build --target=x86_64-unknown-linux-musl --example e1
+
   windows-test:
     runs-on: windows-latest
     strategy:
