--- a/.github/workflows/libloading.yml
+++ b/.github/workflows/libloading.yml
@@ -53,6 +53,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rustup install stable --profile=minimal
+      - run: rustup target add x86_64-unknown-linux-musl
       - run: RUSTFLAGS="-Clinker=rust-lld" cargo build --target=x86_64-unknown-linux-musl --example e1
 
   windows-test:
